k8s.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: ropomoda-front-master
  name: ropomoda-front-master
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: ropomoda-front-master
    deploymentconfig: ropomoda-front-master
  strategy:
    activeDeadlineSeconds: 21600
    resources:
      limits:
        &a1
        cpu: "2"
        memory: 3G
        ephemeral-storage: 3G
      requests: *a1
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        app: ropomoda-front-master
        deploymentconfig: ropomoda-front-master
    spec:
      containers:
        - image: docker-registry.default.svc:5000/frsrsr/ropomoda-front-master
          imagePullPolicy: Always
          name: ropomoda-front-master
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          resources:
            limits: *a1
            requests: *a1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - ropomoda-front-master
        from:
          kind: ImageStreamTag
          name: ropomoda-front-master:latest
        lastTriggeredImage: ""
      type: ImageChange
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ropomoda-front-master-custom
spec:
  host: www.ropomoda.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: ropomoda-front-master
    weight: 100
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ropomoda-front-master
  name: ropomoda-front-master
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: ropomoda-front-master
  type: ClusterIP
